# Secure-Chat-Application

./: .gitmodules  gitignore
Client/include/: BinaryOperations.h  Client.h  SkipJack.h
Client/src/: BinaryOperations.cpp  SkipJack.cpp  main.cpp
Server/: .gitignore  .gitignore.swp  CMakeLists.txt  gitignore
Server/include/: server.h  sha256.h
Server/include/rsa/: rsa.h
Server/include/server/: server.h
Server/src/: server.cpp  sha256.cpp
Server/src/rsa/: rsa.cpp
Server/src/server/: server.cpp
